test/parser/trait_declaration/malformed_error.myte
module test

methods Foo {
  val x: Int = 1
}